Fixed white right hand bar on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,12 @@ body {
     padding: 0;
     padding-top: 45px;
 }
+
+/*----------------------------------------Remove white right side bar on mobile view - Stackoverflow, Vinay Yadav*/
+html, body {
+    overflow-x: hidden;
+}
+
 /*---------------------------------------------header nav title, bootstrap css for image*/
 
 
